RESOLVED FIXED49916
[Qt] Leak with GraphicsContext::takeOwnershipOfPlatformContext()
https://bugs.webkit.org/show_bug.cgi?id=49916
Summary [Qt] Leak with GraphicsContext::takeOwnershipOfPlatformContext()
Andreas Kling
Reported 2010-11-22 09:24:27 PST
The GraphicsContextPlatformPrivate destructor currently calls QPainter::end() before deleting the paint device. QPainter::device() will always return 0 after calling end(), so this code is leaking the device.
Attachments
Patch (1.28 KB, patch)
2010-11-29 04:43 PST, Renata Hodovan
no flags
Renata Hodovan
Comment 1 2010-11-29 04:43:02 PST
Renata Hodovan
Comment 2 2010-11-30 05:41:40 PST
Balazs Kelemen
Comment 3 2010-11-30 07:58:23 PST
Comment on attachment 75016 [details] Patch Clearing flags. Please do not forget it next time! ;)
Renata Hodovan
Comment 4 2010-11-30 08:03:22 PST
(In reply to comment #3) > (From update of attachment 75016 [details]) > Clearing flags. Please do not forget > it next time! ;) Thank you very much ;)
Note You need to log in before you can comment on or make changes to this bug.