[Qt] Leak with GraphicsContext::takeOwnershipOfPlatformContext() https://bugs.webkit.org/show_bug.cgi?id=49916

Reviewed by Andreas Kling.

Change the order of calling QPainter::device() and QPainter::end(), so device() will return with a valid device.
No new test is needed.

* platform/graphics/qt/GraphicsContextQt.cpp:
(WebCore::GraphicsContextPlatformPrivate::~GraphicsContextPlatformPrivate):



Canonical link: https://commits.webkit.org/63366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72907 268f45cc-cd09-0410-ab3c-d52691b4dbfc